<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/colorDialogGridLayout"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/alphaTextView"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="right|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alpha"
        android:visibility="invisible"/>

    <SeekBar
        android:id="@+id/alphaSeekBar"
        android:layout_column="1"
        android:layout_row="0"
        android:max="255"
        android:progress="127"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/redTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="right|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_red" />

    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:id="@+id/greenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_green" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_row="2"
        android:layout_column="1"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/blueTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="right|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_blue" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_row="3"
        android:layout_column="1"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/choose_circle" />


    <RadioGroup
        android:id="@+id/radioA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/amaB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/love" />

        <RadioButton
            android:id="@+id/bomB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/precisaB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/need" />

        <RadioButton
            android:id="@+id/pagoB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/pay" />

    </RadioGroup>

</GridLayout>