<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/o_ikigai_app"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/ikigai" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:text="@string/sob_iki"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/mas_o_que_o_ikigai"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:text="@string/sig_ikigai"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/exp_ikigai"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/app_name"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/version"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>