<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/how_ikigai"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:srcCompat="@drawable/desenharicones" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="40dp"
                android:text="@string/click_ikigai"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="158dp"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="15dp"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:srcCompat="@drawable/dialogoama" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/alterar_ikigai"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:text="@string/mon_ikig"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="122dp"
                android:layout_height="140dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="15dp"
                android:cropToPadding="true"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/circuloama" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="60dp"
                android:text="@string/cor_circulo"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="133dp"
                android:layout_height="149dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.537"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:srcCompat="@drawable/ikigaiexemplo" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="30dp"
                android:text="@string/quiser_apagar"
                android:textAlignment="center"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</LinearLayout>